# zeus-le

./: .clang-format  .clangd  .gitattributes  .gitignore  README.md  default.nix  flake.nix
.github/workflows/: build.yaml
.west/: config  west-nix-cache.json
firmware/: CMakeLists.txt  Kconfig  west.nix  west.yml
firmware/.github/workflows/: build.yaml
firmware/audio/app/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  app.overlay  prj.conf  sysbuild.cmake
firmware/audio/app/boards/: nrf5340bsim_nrf5340_cpuapp.conf  nrf5340bsim_nrf5340_cpuapp.overlay  raytac_mdbt53_db_40_nrf5340_cpuapp.conf  raytac_mdbt53_db_40_nrf5340_cpuapp.overlay  zeus_le_nrf5340_cpuapp.conf  zeus_le_nrf5340_cpuapp.overlay
firmware/audio/app/dts/bindings/: nxp,sgtl5000.yaml  zephyr,dummy-codec.yaml  zephyr,tone-i2s.yaml
firmware/audio/app/src/: CMakeLists.txt  adv_timer.c  adv_timer.h  audio.c  audio.h  coroutine.hpp  coroutine_zephyr.hpp  fixed.h  freq_ctlr.c  freq_ctlr.h  freq_est.c  freq_est.h  ftp.c  ftp.h  input_codec.h  led.c  led.h  main.c  mgr.cpp  mgr.h  net_audio.c  net_audio.h  power.c  power.h  record.c  record.h  sd_card.c  sd_card.h  sgtl5000.c  shell.c  sync_timer.c  sync_timer.h  usb.c  usb.h  usb_audio.c  usb_audio.h  wav.c  wav.h
firmware/audio/app/src/drivers/: .clang-format  CMakeLists.txt  Kconfig  dummy_codec.c  i2s_alsa.c  i2s_tone.c  input_codec.h  sgtl5000.c  sgtl5000.h  tlv320adcx120.c  tlv320adcx120.h
firmware/audio/app/src/drivers/disk/: CMakeLists.txt  Kconfig  Kconfig.cache  disk_cache.c
firmware/audio/common/: CMakeLists.txt  audio.dtsi
firmware/audio/net/: CMakeLists.txt  app.overlay  prj.conf
firmware/audio/net/boards/: nrf5340bsim_nrf5340_cpunet.conf
firmware/audio/net/src/: main.c
firmware/central/: CMakeLists.txt  sysbuild.cmake
firmware/central/app/: CMakeLists.txt  Kconfig  app.overlay  prj.conf  sysbuild.cmake
firmware/central/app/boards/: nrf5340bsim_nrf5340_cpuapp.conf  nrf5340bsim_nrf5340_cpuapp.overlay  raytac_mdbt53_db_40_nrf5340_cpuapp.conf  raytac_mdbt53_db_40_nrf5340_cpuapp.overlay  zeus_le_nrf5340_cpuapp.conf  zeus_le_nrf5340_cpuapp.overlay
firmware/central/app/src/: CMakeLists.txt  main.c  sync.c  sync.h
firmware/central/common/: CMakeLists.txt  central.dtsi
firmware/central/net/: CMakeLists.txt  app.overlay  prj.conf
firmware/central/net/boards/: raytac_mdbt53_db_40_nrf5340_cpunet.conf
firmware/central/net/dts/arm/nordic/: override.dtsi
firmware/central/net/src/: hci_ipc.c  hci_ipc.h  main.c
firmware/central/src/: main.c
firmware/common/: CMakeLists.txt  Kconfig
firmware/drivers/: .clang-format  CMakeLists.txt  Kconfig
firmware/hci_ipc/: CMakeLists.txt
firmware/lftpd/: .clang-format  .gitignore  CMakeLists.txt  Kconfig  lftpd.c  lftpd_inet.c  lftpd_io.c  lftpd_path.c  lftpd_string.c
firmware/openocd/: gdb-app.sh  gdb-net.sh  openocd.cfg
firmware/protocol/: CMakeLists.txt
firmware/tools/: flash-app.sh  flash-net.sh  flash.sh  gdb.sh  net-audio.conf  net-central.conf  net.conf  openocd.cfg  simulator.sh
firmware/zephyr/: module.yml
model/: freq_ctlr.ipynb  freq_est_model.ipynb  freq_est_sim.ipynb  hfclkaudio_capture.py  hfclkaudio_dynamics.ipynb  shell.nix
pcb/: .gitignore  audio.kicad_sch  fp-lib-table  led.kicad_sch  mcu.kicad_sch  power.kicad_sch  sd_card.kicad_sch  zeus-le.kicad_pcb  zeus-le.kicad_prl  zeus-le.kicad_pro  zeus-le.kicad_sch  zeus-le.kicad_sym
pcb/rev-1/: audio.kicad_sch  led.kicad_sch  mcu.kicad_sch  power.kicad_sch  sd_card.kicad_sch  sym-lib-table  zeus-le.3dshapes  zeus-le.kicad_dru  zeus-le.kicad_pcb  zeus-le.kicad_prl  zeus-le.kicad_pro  zeus-le.kicad_sch  zeus-le.kicad_sym  zeus-le.pretty
pcb/rev-2/: #auto_saved_files#  _autosave-psram.kicad_sch  audio.kicad_sch  fp-lib-table  led.kicad_sch  mcu.kicad_sch  power.kicad_sch  psram.kicad_sch  sd_card.kicad_sch  sym-lib-table  zeus-le-rev-2.kicad_pcb  zeus-le-rev-2.kicad_prl  zeus-le-rev-2.kicad_pro  zeus-le-rev-2.kicad_sch
pcb/sim/: CL05A104KA5NNN_Precise_Interactive_LT.asy  CL05A104KA5NNN_Precise_Interactive_LT.mod  CL10B105KP8NNN_Precise_Interactive_LT.asy  CL10B105KP8NNN_Precise_Interactive_LT.mod  CL31A107MQHNNW_Precise_Interactive_LT.asy  CL31A107MQHNNW_Precise_Interactive_LT.mod  GRM188R61A106ME69_LT.asy  GRM188R61A106ME69_LT.mod  MLZ2012N220LT000_b.asy  MLZ2012N220LT000_b_LTspice.mod  decoupling_resonance.asc  vdda_filter.asc
pcb/zeus-le.3dshapes/: Diodes_UDFN2018-6.step  Fanstel_WT02C40C-V3.step  Fanstel_WT02C40C-VC.step  JST_PH_B5B-PH-SM4-TB_1x05-1MP_P2.00mm_Vertical.step  Kinetic_WLCSP-12_1.94x1.28mm_Layout4x3_P0.4mm_Ball0.25mm.step  L_Coilcraft_XxL4015.step  Maxim_WLP-24_2.018x2.618mm_Layout6x4_P0.4mm_Ball0.27mm.step  Panasonic_EVQPUM_EVQPUD.step  Richtek_WLCSP-15_1.4x2.3mm_Layout3x5_P0.4mm.step  Texas_DSBGA-20_1.615x2.015mm_Layout4x5_P0.4mm.step  WSON-8-1EP_3x3mm_P0.65mm_EP1.65x2.4mm.step  Winbond_USON-8-1EP_3x2mm_P0.5mm_EP0.2x1.6mm.step
pcb/zeus-le.pretty/: C_0402_1005Metric_Silkscreen_Clearance.kicad_mod  Diodes_UDFN2018-6.kicad_mod  Kinetic_WLCSP-12_1.94x1.28mm_Layout4x3_P0.4mm_Ball0.25mm_Pad0.25mm_NSMD.kicad_mod  Kinetic_WLCSP-12_1.94x1.28mm_Layout4x3_P0.4mm_Ball0.25mm_Pad0.25mm_SMD.kicad_mod  LED_QBLP600-RGB-3053.kicad_mod  LED_QBLP615-RGB-3053.kicad_mod  L_Bourns_SRP4020FA_4.1x4.1mm.kicad_mod  Maxim_WLP-24_2.018x2.618mm_Layout6x4_P0.4mm_Ball0.27mm_Pad0.25mm_NSMD.kicad_mod  R_0402_1005Metric_Silkscreen_Clearance.kicad_mod  Richtek_WLCSP-15_1.4x2.3mm_Layout3x5_P0.4mm_NSMD.kicad_mod  Richtek_WLCSP-15_1.4x2.3mm_Layout3x5_P0.4mm_SMD.kicad_mod  Texas_DSBGA-20_1.615x2.015mm_Layout4x5_P0.4mm.kicad_mod  Texas_DSBGA-20_1.615x2.015mm_Layout4x5_P0.4mm_NSMD.kicad_mod  Texas_DSBGA-20_1.615x2.015mm_Layout4x5_P0.4mm_SMD.kicad_mod  Texas_RTE_WQFN-20-1EP_3x3mm_P0.5mm_EP1.4x1.4mm_ThermalVias.kicad_mod  USB_C_Receptacle_Amphenol_12402012E21-2A.kicad_mod  WSON-8-1EP_3x3mm_P0.65mm_EP1.65x2.4mm_ThermalVias.kicad_mod  WT02C40C-V3.kicad_mod  WT02C40C-VC.kicad_mod  WT02C40C.kicad_mod  WT02V40V.kicad_mod  microSD_HC_CUI_MSD-1-A.kicad_mod  orig_Texas_RTE_WQFN-20-1EP_3x3mm_P0.5mm_EP1.2x0.8mm_ThermalVias.kicad_mod
(+92 files in other folders)
